# hsr123

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: apriltag_tags.yaml  basic.rviz  rviz_test.rviz
env-hooks/: hsr123.bash.em
launch/: basic.launch  detection.launch  hsrb_gazebo_common.xml  my_rivz.launch  phy_yolo.launch  pickup.launch  rrt.launch  rviz_test.launch  yolo.launch  yolo2.launch
models/box/: model.sdf
models/hsr_coke_with_april/: model.sdf
models/hsr_coke_with_ar/: model.sdf
models/table/: model.sdf
resources/: box.scene  hsrb.srdf  hsrb.urdf  ik.xml  phy_yolo_table.scene  rrt.xml
resources/basic/: aico.xml
resources/detect/: aico.xml
resources/pickup/: aico.xml  aico_new.xml  base.traj  base1.traj  base2.traj  ik.xml  rrt.xml
resources/random/: aico.xml
resources/rrt/: rrt.xml
src/: basic_traj_aico.py  basic_traj_follow.py  detect_traj_aico.py  detect_traj_follow.py  follow.py  hsrb_interface_test.py  ik.py  increment_server.py  my_arm_client.py  my_base_client.py  my_functions.py  phy_detect.py  phy_yolo.py  pick_up.py  pickup.py  pickup_aico  pickup_aico new.py  pickup_aico.py  pickup_follow.py  pickup_ik.py  pickup_plan.py  pickup_rrt.py  rrt.py  test.py  test2.py  traj_aico.py  traj_follow.py  velocity_setting_test.py  yolo.py  yolo_rrtfigure.py
src/image/: detect.py  get_distance.py  get_image.py  get_xyz.py  test_yolov3-1.py  test_yolov3-2.py  test_yolov5.py
src/pickle/: traj1.pkl  traj2.pkl  traj3.pkl
src/pickup_traj/: base1.traj  base2.traj  phy_yolo.traj  traj_aico.npy  traj_aico1.npy  traj_aico2.npy  (+3 more)
(+8 files in other folders)
