<?xml version="1.0"?>
<package format="2">
  <name>hsr123</name>
  <version>0.0.0</version>
  <description>The hsr123 package</description>
  <maintainer email="hzhu@todo.todo">hzhu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>hsr_meshes</exec_depend>

</package>
